--- a/Mission_to_Mars_Challenge.ipynb
+++ b/Mission_to_Mars_Challenge.ipynb
@@ -27,9 +27,9 @@
       "\n",
       "\n",
       "====== WebDriver manager ======\n",
-      "Current google-chrome version is 96.0.4664\n",
-      "Get LATEST chromedriver version for 96.0.4664 google-chrome\n",
-      "Driver [C:\\Users\\Charles\\.wdm\\drivers\\chromedriver\\win32\\96.0.4664.45\\chromedriver.exe] found in cache\n"
+      "Current google-chrome version is 97.0.4692\n",
+      "Get LATEST chromedriver version for 97.0.4692 google-chrome\n",
+      "Driver [C:\\Users\\Charles\\.wdm\\drivers\\chromedriver\\win32\\97.0.4692.71\\chromedriver.exe] found in cache\n"
      ]
     }
    ],
@@ -94,7 +94,7 @@
     {
      "data": {
       "text/plain": [
-       "<div class=\"content_title\">NASA's New Mars Rover Is Ready for Space Lasers</div>"
+       "<div class=\"content_title\">Two of a Space Kind: Apollo 12 and Mars 2020</div>"
       ]
      },
      "execution_count": 5,
@@ -116,7 +116,7 @@
     {
      "data": {
       "text/plain": [
-       "\"NASA's New Mars Rover Is Ready for Space Lasers\""
+       "'Two of a Space Kind: Apollo 12 and Mars 2020'"
       ]
      },
      "execution_count": 6,
@@ -139,7 +139,7 @@
     {
      "data": {
       "text/plain": [
-       "'Perseverance is one of a few Mars spacecraft carrying laser retroreflectors. The devices could provide new science and safer Mars landings in the future.'"
+       "'Apollo 12 and the upcoming Mars 2020 mission may be separated by half a century, but they share several goals unique in the annals of space exploration.'"
       ]
      },
      "execution_count": 7,
@@ -206,7 +206,7 @@
     {
      "data": {
       "text/plain": [
-       "'image/featured/mars2.jpg'"
+       "'image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 11,
@@ -229,7 +229,7 @@
     {
      "data": {
       "text/plain": [
-       "'https://spaceimages-mars.com/image/featured/mars2.jpg'"
+       "'https://spaceimages-mars.com/image/featured/mars1.jpg'"
       ]
      },
      "execution_count": 12,
@@ -512,12 +512,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "C:\\Users\\Charles\\anaconda3\\envs\\PythonData\\envs\\PythonData\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:525: FutureWarning: browser.find_link_by_text is deprecated. Use browser.links.find_by_text instead.\n",
+      "C:\\Users\\Charles\\anaconda3\\envs\\PythonData\\lib\\site-packages\\splinter\\driver\\webdriver\\__init__.py:525: FutureWarning: browser.find_link_by_text is deprecated. Use browser.links.find_by_text instead.\n",
       "  warnings.warn(\n"
      ]
     }
    ],
    "source": [
+    "# 2. Create a list to hold the images and titles.\n",
     "hemisphere_image_urls = []\n",
     "# 3. Write code to retrieve the image urls and titles for each hemisphere.\n",
     "for element in range(4):\n",
